# mcc

./: .gitignore  CMakeLists.txt  README.md  shell.nix
include/: SimpleVertexShader.vertexshader
scripts/: build.sh
src/: main.c  main.cpp
src/common/: loadShader.cpp  loadShader.hpp
